--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,14 @@
 {
-  "manifest_version": 3,
-  "name": "Enhanced Notes Extension",
-  "version": "1.0",
-  "description": "A note-taking extension with dark/light themes, drag-and-drop, and fullscreen functionality.",
-  "permissions": ["storage"],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+    "manifest_version": 3,
+    "name": "Notepad Extension",
+    "version": "1.0",
+    "description": "A simple notepad extension for taking notes.",
+    "permissions": ["storage"],
+    "background": {
+      "service_worker": "background.js"
+    },
+    "action": {
+      "default_popup": "popup.html"
     }
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
   }
-}
+  
